// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`representations GET /share should contain correct content if inquiry and proof of evidence and no ip comment or statement to share 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Progress to proof of evidence and witnesses</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">There are no interested party comments or statements to share.
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Do not progress to proof
                    of evidence and witnesses if you are awaiting any late statements or interested
                    party comments.</strong>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Progress to proof of evidence and witnesses</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`representations GET /share should contain correct content if inquiry and proof of evidence and status is set to "EVIDENCE" and no proof of evidence to share 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Progress to inquiry</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">There are no proof of evidence and witnesses to share.</p>
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Do not progress to inquiry
                    if you are awaiting any late proof of evidence and witnesses.</strong>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Progress to inquiry</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`representations GET /share should contain link to interested-party-comments#valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Share IP comments and statements</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-inset-text">We’ll share the <a href="/appeals-service/appeal-details/1/interested-party-comments?backUrl=%2Fappeals-service%2Fappeal-details%2F1%2Fshare#valid"
                class="govuk-link">1 interested party comments</a> with the relevant parties.</div>
            <div             class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Do not confirm until
                    you have reviewed all of the supporting documents and redacted any sensitive
                    information.</strong>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <form method="post" novalidate="novalidate">
                    <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;
